--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
   min-height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.hide{
+  display: none;
 }
